criando o componente home

--- a/crud_notas/src/app/components/navbar/navbar.component.html
+++ b/crud_notas/src/app/components/navbar/navbar.component.html
@@ -4,8 +4,8 @@
     </div>
     <div id="segunda_metade">
         <div id="icones">
-            <img src="assets/scenery.svg" alt="" class="icone">
-            <img src="assets/bell.svg" alt="" class="icone">
+            <div class="icon"><img src="assets/scenery.svg" alt="" class="icone"></div>
+            <div class="icon"><img src="assets/bell.svg" alt="" class="icone"></div>
         </div>
         <div id="usuario">
             <img src="assets/angle-bottom-b.svg" alt="">
