--- a/crud_notas/src/app/components/sidebar/sidebar.component.html
+++ b/crud_notas/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,13 @@
  <div id="sidebar_principal">
     <div id="images">
-        <img src="assets\home.svg" alt="">
-        <img src="assets\card-machine.svg" alt="">
-        <img src="assets\university.svg" alt="">
-        <img src="assets\scenery.svg" alt="aa">
-        <img src="assets\scenery.svg" alt="">
+        <div class="icon"><img src="assets\home.svg" alt=""></div>
+        <div class="icon"><img src="assets\card-machine.svg" alt=""></div>
+        <div class="icon"><img src="assets\university.svg" alt=""></div>
+        <div class="icon"><img src="assets\scenery.svg" alt="aa"></div>
+        <div class="icon"><img src="assets\scenery.svg" alt=""></div>
     </div>
     <div id="vector">
-        <img src="assets\Vector.svg" alt="">
+        <div class="icon"><img src="assets\Vector.svg" alt=""></div>
+        
     </div>
 </div>
