--- a/crud_notas/src/app/components/navbar/navbar.component.css
+++ b/crud_notas/src/app/components/navbar/navbar.component.css
@@ -4,13 +4,14 @@
     margin: 0 ;
 }
 #navbar{
+    background-color: white;
     display: flex;
     width: 99.65vw;
     height:50px;
     justify-content: space-between ;
     align-items: center;
-
-    box-shadow: black -4px 0.1px 4px;
+    border-bottom: #e0e0e0;
+    box-shadow: rgba(112, 112, 112, 0.2) 0px 2px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 2px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     div{
         margin-left:20px ;
         display: flex;
@@ -22,9 +23,11 @@
         display: flex;
         width: 50%;
         justify-content: flex-end;
+        margin-right: 20px  ;
         #icones{
-            width: 35%;
-            justify-content: space-evenly;
+            margin-right: 18px;
+            width: 12%;
+            justify-content: space-between;
             .icone{
                 width: 20px;
             }
@@ -40,4 +43,11 @@
 }
 #logo{
     width: 90% ;
+}
+.icon{
+    transition: 0.2s ease-in-out;
+}
+.icon:nth-child(n):hover{
+    transform: scale(1.3);
+    filter: brightness(0) saturate(100%) invert(61%) sepia(64%) saturate(497%) hue-rotate(88deg) brightness(92%) contrast(93%);
 }
