--- a/crud_notas/src/app/components/sidebar/sidebar.component.css
+++ b/crud_notas/src/app/components/sidebar/sidebar.component.css
@@ -1,6 +1,7 @@
 #sidebar_principal {
+    z-index: -1;
     background-color: white;
-    width: 80px; 
+    width: 65px; 
     height: 100%;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     border-right: 1px solid #e0e0e0; 
@@ -15,14 +16,21 @@
 
 
 #images{
-    margin-top: 10px;
+    margin-top: 70px;
     display: flex;
     flex-direction: column;
     height: 25px;
-    width: 25px;
+    width: 20px;
     gap: 20px;
+    
 }
-
+.icon{
+    transition: 0.2s ease-in-out;
+}
+.icon:nth-child(n):hover{
+    transform: scale(1.3);
+    filter: brightness(0) saturate(100%) invert(61%) sepia(64%) saturate(497%) hue-rotate(88deg) brightness(92%) contrast(93%);
+}
 #vector{
     border-top:1px solid #e0e0e0;
     display: flex;
@@ -31,9 +39,9 @@
     justify-content: center;
     width: 100%;
     height: 50px;
-    margin-top: 480px;
+    margin-top: 320px;
     img{
         height: 25px;
-        width: 25px;
+        width: 20px;
     }
 }
