--- a/crud_notas/src/app/components/caminho/caminho.component.html
+++ b/crud_notas/src/app/components/caminho/caminho.component.html
@@ -1,3 +1,3 @@
 <div>
-    <p id="texto_normal">Ínicio <span id="maiorzinho">&gt;</span><span id="negrito_texto">Laboratório de Germinares</span></p>
+    <p id="texto_normal">Início <span id="maiorzinho">&gt;</span><span id="negrito_texto">Laboratório de Germinares</span></p>
 </div>
