Mandando tela inicial

--- a/crud_notas/src/app/components/home/home.component.html
+++ b/crud_notas/src/app/components/home/home.component.html
@@ -1,3 +1,18 @@
 <app-navbar></app-navbar>
 <app-sidebar></app-sidebar>
 <app-caminho></app-caminho>
+
+<div id="germinares">
+    <p id="texto_germinare">Laboratório de Germinares</p>
+    <div id="escolhas">
+        <div id="gerenciamento">
+            <img src="assets\Icon.svg" class="images_home" alt="">
+            <p class="texto_home">Gerenciamento de Notas</p>
+        </div>
+        <div id="graficos">
+            <img src="assets\grafico.svg" class="images_home" alt="">
+            <p class="texto_home">Gráficos</p>
+        </div>
+    </div>
+</div>
+
