--- a/crud_notas/src/app/components/sidebar/sidebar.component.css
+++ b/crud_notas/src/app/components/sidebar/sidebar.component.css
@@ -1,5 +1,5 @@
 #sidebar_principal {
-    z-index: -1;
+    z-index: 1;
     background-color: white;
     width: 65px; 
     height: 100%;
@@ -24,13 +24,17 @@
     gap: 20px;
     
 }
-.icon{
+.icon {
+    height: 25px;
+    width: 20px;
     transition: 0.2s ease-in-out;
 }
-.icon:nth-child(n):hover{
-    transform: scale(1.3);
+
+.icon:hover {
+    transform: translateY(-5px) scale(1.3);
     filter: brightness(0) saturate(100%) invert(61%) sepia(64%) saturate(497%) hue-rotate(88deg) brightness(92%) contrast(93%);
 }
+
 #vector{
     border-top:1px solid #e0e0e0;
     display: flex;
@@ -40,8 +44,5 @@
     width: 100%;
     height: 50px;
     margin-top: 420px;
-    img{
-        height: 25px;
-        width: 20px;
-    }
+
 }
