--- a/crud_notas/src/app/components/home/home.component.html
+++ b/crud_notas/src/app/components/home/home.component.html
@@ -6,13 +6,14 @@
     <p id="texto_germinare">Laboratório de Germinares</p>
     <div id="escolhas">
         <div id="gerenciamento">
-            <img src="assets\Icon.svg" class="images_home" alt="">
-            <p class="texto_home">Gerenciamento de Notas</p>
+            <img src="assets/Icon.svg" class="images_home" alt="">
+            <a routerLink="/login" class="texto_home">Gerenciamento de Notas</a>
         </div>
         <div id="graficos">
-            <img src="assets\grafico.svg" class="images_home" alt="">
-            <p class="texto_home">Gráficos</p>
+            <img src="assets/grafico.svg" class="images_home" alt="">
+            <a class="texto_home">Gráficos</a>
         </div>
     </div>
 </div>
+
 
