--- a/crud_notas/src/app/components/home/home.component.html
+++ b/crud_notas/src/app/components/home/home.component.html
@@ -7,11 +7,11 @@
     <div id="escolhas">
         <div id="gerenciamento">
             <img src="assets\Icon.svg" class="images_home" alt="">
-            <p class="texto_home">Gerenciamento de Notas</p>
+            <a routerLInk="/login"class="texto_home">Gerenciamento de Notas</a>
         </div>
         <div id="graficos">
             <img src="assets\grafico.svg" class="images_home" alt="">
-            <p class="texto_home">Gráficos</p>
+            <a routerLInk="/graficos"class="texto_home">Gráficos</a>
         </div>
     </div>
 </div>
