--- a/crud_notas/src/app/components/sidebar/sidebar.component.css
+++ b/crud_notas/src/app/components/sidebar/sidebar.component.css
@@ -1,8 +1,9 @@
 #sidebar_principal {
+    justify-content: space-between;
     z-index: 1;
     background-color: white;
     width: 65px; 
-    height: 100%;
+    height: 98%;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     border-right: 1px solid #e0e0e0; 
     display: flex;
@@ -16,12 +17,14 @@
 
 
 #images{
-    margin-top: 70px;
+    margin-top: 30%;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     height: 25px;
-    width: 20px;
-    gap: 20px;
+    width: 100%;
+    height: 50%;
     
 }
 .icon {
@@ -43,6 +46,4 @@
     justify-content: center;
     width: 100%;
     height: 50px;
-    margin-top: 420px;
-
 }
