--- a/crud_notas/src/app/components/home/home.component.html
+++ b/crud_notas/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
         </div>
         <div id="graficos">
             <img src="assets/grafico.svg" class="images_home" alt="">
-            <a class="texto_home">Gráficos</a>
+            <a routerLink="/graficos" class="texto_home">Gráficos</a>
         </div>
     </div>
 </div>
