--- a/crud_notas/src/app/components/sidebar/sidebar.component.css
+++ b/crud_notas/src/app/components/sidebar/sidebar.component.css
@@ -12,12 +12,11 @@
     padding-top: 20px;
     position: fixed; 
     left: 0;
-    top: 0;
+    top: 3%;
 }
 
 
 #images{
-    margin-top: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -46,4 +45,5 @@
     justify-content: center;
     width: 100%;
     height: 50px;
+    margin-bottom: 35%;
 }
