Adicionando pop-up de error de login

--- a/crud_notas/src/app/components/login/login.component.html
+++ b/crud_notas/src/app/components/login/login.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
 <app-sidebar></app-sidebar>
 <app-caminho></app-caminho>
+
 <div id="login">
     <h1>Laboratório de Germinares</h1>
     <p>Realize o login! Caso seja o seu primeiro acesso, faça o cadastro</p>
@@ -11,7 +12,7 @@
         </div>
         <div id="botoes">
             <button class="botao"><img src="assets/Share.svg" alt="" class="icon">Cadastrar</button>
-            <button class="botao"><img src="assets/import.svg" alt="" class="icon">Fazer login</button>
+            <button type="button" class="botao" (click)="registrado()"><img src="assets/import.svg" alt="" class="icon">Fazer login</button>
         </div>
     </form>
 </div>
