--- a/crud_notas/src/app/components/home/home.component.html
+++ b/crud_notas/src/app/components/home/home.component.html
@@ -8,14 +8,10 @@
         <div id="gerenciamento">
             <img src="assets/Icon.svg" class="images_home" alt="">
             <a routerLink="/login" class="texto_home">Gerenciamento de Notas</a>
-            <img src="assets\Icon.svg" class="images_home" alt="">
-            <a routerLInk="/login"class="texto_home">Gerenciamento de Notas</a>
         </div>
         <div id="graficos">
             <img src="assets/grafico.svg" class="images_home" alt="">
-            
-            <img src="assets\grafico.svg" class="images_home" alt="">
-            <a routerLInk="/graficos"class="texto_home">Gráficos</a>
+            <a routerLink="/graficos" class="texto_home">Gráficos</a>
         </div>
     </div>
 </div>
