--- a/crud_notas/src/app/components/home/home.component.html
+++ b/crud_notas/src/app/components/home/home.component.html
@@ -5,14 +5,14 @@
 <div id="germinares">
     <p id="texto_germinare">Laboratório de Germinares</p>
     <div id="escolhas">
-        <div id="gerenciamento">
+        <button id="gerenciamento" routerLink="/login">
             <img src="assets/Icon.svg" class="images_home" alt="">
-            <a routerLInk="/login"class="texto_home">Gerenciamento de Notas</a>
-        </div>
-        <div id="graficos">
+            <p class="texto_home">Gerenciamento de Notas</p>
+        </button>
+        <button id="graficos" routerLink="/graficos">
             <img src="assets/grafico.svg" class="images_home" alt="">
-            <a routerLInk="/graficos"class="texto_home">Gráficos</a>
-        </div>
+            <p class="texto_home">Gráficos</p>
+        </button>
     </div>
 </div>
 
