--- a/crud_notas/src/app/components/gerenciamento-notas/gerenciamento-notas.component.css
+++ b/crud_notas/src/app/components/gerenciamento-notas/gerenciamento-notas.component.css
@@ -1,29 +1,138 @@
-*{
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-#tabela{
+#titulo{
+    display: flex;
+    align-self: flex-start;
+    margin-left: 8.8% ;
+}
+#primeira_parte{
+    width: 80%;
+    display: flex;
+}
+#simbolo{
+    display: flex;
+    justify-content: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: lightgrey;
+    width: 4%;
+    height: 80%;
+    img{
+        width: 65%;
+    }
+}
+#pesquisa{
+    width: 75vw;
+    height: 7%;
+    display: flex;
+    justify-content: space-between;
+    #primeira_parte{
+        width: 80%;
+        input{
+            border: none;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px ;
+            background-color:lightgray;
+            width: 50%;
+            height: 80%;
+        }
+    }
+    input::placeholder{
+        background-image: url("https://www.google.com/imgres?q=metallica&imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fb%2Fb7%2FMetallica_logo.png&imgrefurl=https%3A%2F%2Fpt.m.wikipedia.org%2Fwiki%2FFicheiro%3AMetallica_logo.png&docid=ycGuK46gId_JlM&tbnid=-F-AZQbAjJfzbM&vet=12ahUKEwjd2Y6i-oyNAxXWlJUCHb00I8UQM3oECFcQAA..i&w=5000&h=2097&hcb=2&ved=2ahUKEwjd2Y6i-oyNAxXWlJUCHb00I8UQM3oECFcQAA")
+    }
+    #botoes{
+        display: flex;
+        justify-content: space-between;
+        width: 20%;
+        button{
+            border: none;
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            border-radius: 4px;
+        }
+        button:first-child{
+            display: flex;
+            justify-content: center;
+            width: 35%;
+            background-color: transparent;
+            color: #238662;
+            font-weight: bold;
+            transition: ease-in-out 0.2s;
+        }
+        button:first-child:hover{
+            color: white;
+            background-color: #238662;
+        }
+        button:nth-child(2){
+            img{
+                width:15%;
+            }
+            background-color: #238662 ;
+            color:white;
+        }
+        button:nth-child(2):hover{
+            background-color: #155d43;
+        }
+    }
+}
+#corpo{
+    height: 80vh;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#tabela {
     display: flex;
     flex-direction: column;
     width: 95.7vw;
-    height: 80.7vh;
+    height: 60.7vh;
     align-items: center;
-    justify-content: space-evenly;
-    table{
-        width: 80%;
-        tbody{
+    justify-content: space-between;
+}
 
-            tr:nth-child(even){
-                background-color: lightgray;
-            }
-            td:nth-last-child(1){
-                text-align: center;
-            }
-        }
-    }
-    div{
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        margin-right: 20px;
-    }
+#tabela table {
+    width: 80%;
+    border-collapse: collapse; 
+}
+
+#tabela thead {
+    background-color: rgb(239, 239, 239); 
+}
+
+#tabela th, #tabela td {    padding: 8px;
+    text-align: left;
+}
+
+#tabela tbody td:nth-last-child(1) {
+    text-align: center;
+}
+
+#tabela div {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+
+#tabela div * {
+    border: none;
+}
+
+#tabela div button:nth-child(1), #tabela div button:last-child {
+    width: 4%;
+}
+
+#tabela div button:nth-child(1) p, #tabela div button:last-child p {
+    width: 100%;
+    font-size: 26px;
+}
+
+#tabela div button {
+    width: 2%;
+    border-radius: 4px;
 }
