--- a/crud_notas/src/app/components/login/login.component.html
+++ b/crud_notas/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
             <input class="input" type="password" placeholder="Senha">
         </div>
         <div id="botoes">
-            <button class="botao"><img src="assets/Share.svg" alt="" class="icon">Cadastrar</button>
+            <button class="botao" routerLink="/cadastro"><img src="assets/Share.svg" alt="" class="icon">Cadastrar</button>
             <button type="button" class="botao" (click)="registrado()"><img src="assets/import.svg" alt="" class="icon">Fazer login</button>
         </div>
     </form>
