--- a/crud_notas/src/app/components/linguagens/linguagens.component.html
+++ b/crud_notas/src/app/components/linguagens/linguagens.component.html
@@ -27,8 +27,8 @@
 
     <div id="botoes">
         <button class="botao">Descartar</button>
-        <button class="botao">
-            <img src="assets/Share.svg" alt="" class="icon">
+        <button type="button" class="botao" (click)="atualizarNotas()">
+            <img src="assets/Share.svg" alt="" class="icon" >
             Cadastrar Aluno
         </button>
     </div>
