--- a/crud_notas/src/app/components/cadastro-aluno/cadastro-aluno.component.html
+++ b/crud_notas/src/app/components/cadastro-aluno/cadastro-aluno.component.html
@@ -16,22 +16,23 @@
             <p class="texto-etapa">Notas</p>
         </div>
     </div>
-
-    <form action="" id="formulario">
-        <div id="inputs">
-            <input class="input" type="text" placeholder="E-mail">
-            <input class="input" type="text" placeholder="Nome completo">
-            <input class="input" type="text" placeholder="Gênero">
-            <input class="input" type="text" placeholder="Data de nascimento">
-            <input class="input" type="text" placeholder="Tipo de alimentação">
-            <input class="input" type="text" placeholder="Escolaridade País">
-        </div>
-    </form>
+    <div id="formulario">
+        <form action="" >
+            <div id="inputs">
+                <input class="input" type="text" placeholder="E-mail">
+                <input class="input" type="text" placeholder="Nome completo">
+                <input class="input" type="text" placeholder="Gênero">
+                <input class="input" type="text" placeholder="Data de nascimento">
+                <input class="input" type="text" placeholder="Tipo de alimentação">
+                <input class="input" type="text" placeholder="Escolaridade País">
+            </div>
+        </form>
+    </div>
 
     <div id="botoes">
         <button class="botao">Descartar</button>
-        <button class="botao">
-            <img src="assets/Share.svg" alt="" class="icon">
+        <button class="botao" routerLink="/linguagens">
+            <img src="assets/Share.svg"  class="icon">
             Próximo
         </button>
     </div>
