--- a/crud_notas/src/app/components/linguagens/linguagens.component.html
+++ b/crud_notas/src/app/components/linguagens/linguagens.component.html
@@ -17,13 +17,15 @@
         </div>
     </div>
 
-    <form action="" id="formulario">
-        <div id="inputs">
-            <input class="input" type="text" placeholder="Linguagens">
-            <input class="input" type="text" placeholder="Exatas">
-            <input class="input" type="text" placeholder="Ciências">
-        </div>
-    </form>
+    <div id="formulario">
+        <form action="" >
+            <div id="inputs">
+                <input class="input" type="text" placeholder="Linguagens">
+                <input class="input" type="text" placeholder="Exatas">
+                <input class="input" type="text" placeholder="Ciências">
+            </div>
+        </form>
+    </div>
 
     <div id="botoes">
         <button class="botao">Descartar</button>
