--- a/crud_notas/src/app/components/cadastro-aluno/cadastro-aluno.component.css
+++ b/crud_notas/src/app/components/cadastro-aluno/cadastro-aluno.component.css
@@ -7,7 +7,8 @@
     display: flex;
     flex-direction: column;
     margin: 2% 7%;
-    width: 100%;
+    width: 90%;
+    height: 75%;
 }
 
 #texto_cadastro {
@@ -15,10 +16,12 @@
 }
 
 #formulario {
+
     margin-top: 2%;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    height: 65%;
+    justify-content: space-around;
 }
 
 .input {
@@ -94,7 +97,7 @@
     justify-content: center;
     align-items: center;
     gap: 24px;
-    margin-top: 16px;
+    /* margin-top: 16px; */
     margin-right: 100px;
 }
 
