--- a/crud_notas/src/app/components/linguagens/linguagens.component.css
+++ b/crud_notas/src/app/components/linguagens/linguagens.component.css
@@ -15,10 +15,12 @@
 }
 
 #formulario {
+    width: 90vw;
     margin-top: 2%;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    height: 65%;
+    justify-content: space-around;
 }
 
 .input {
@@ -91,12 +93,11 @@
 }
 
 #etapas {
+    width: 83vw;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 24px;
-    margin-top: 16px;
-    margin-right: 100px;
 }
 
 .etapa {
